--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -7,5 +7,5 @@
   "description": "Hello World sample application that responds to the deviceready event.",
   "author": "PhoneGap Team",
   "icons": [],
-  "start_url": "form-login.html"
+  "start_url": "index.html"
 }
