Update perpindahan halaman

--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,11 +1,11 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "helloworld",
-  "short_name": "helloworld",
+  "name": "Pusat Riyal",
+  "short_name": "Pusat Riyal",
   "version": "com.phonegap.helloworld",
-  "description": "Hello World sample application that responds to the deviceready event.",
-  "author": "PhoneGap Team",
+  "description": "Sistem Informasi Pusat Riyal.",
+  "author": "syaifudinhadi8@gmail.com",
   "icons": [],
   "start_url": "index.html"
 }
