--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -7,5 +7,6 @@
   "description": "Sistem Informasi Pusat Riyal.",
   "author": "syaifudinhadi8@gmail.com",
   "icons": [],
+  "orientation": "portrait",
   "start_url": "index.html"
 }
