--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-vibration": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-geolocation-android-activator": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "25.+"
       },
@@ -31,6 +30,7 @@
   "dependencies": {
     "bootstrap-datepicker": "^1.8.0",
     "cordova-android": "^8.0.0",
+    "cordova-android-support-gradle-release": "^2.1.0",
     "cordova-plugin-battery-status": "~1.2.4",
     "cordova-plugin-camera": "~2.4.1",
     "cordova-plugin-device": "~1.1.6",
@@ -44,8 +44,6 @@
     "cordova-plugin-vibration": "~2.1.5",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.12",
-    "select2": "^4.0.6-rc.1",
-    "cordova-plugin-geolocation-android-activator": "^1.1.2",
-    "cordova-android-support-gradle-release": "^2.1.0"
+    "select2": "^4.0.6-rc.1"
   }
 }
