Update by didin

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,6 @@
 /node_modules
 www/config/config.js
 /platform
-
-platforms/android/android.json
-platforms/android/app/src/main/assets/www/config/config.js
-platforms/android/app/src/main/assets/www/index.html
-platforms/browser/browser.json
-platforms/browser/www/config/config.js
-platforms/browser/www/index.html
+/hooks
+/node_modules
+/vendor
