--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       },
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "27.+"
+      },
+      "cordova-pdf-generator": {},
+      "cordova-plugin-printer": {
+        "ANDROID_SUPPORT_V4_VERSION": "28.+"
       }
     }
   },
@@ -44,6 +48,8 @@
     "cordova-plugin-vibration": "~2.1.5",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.12",
-    "select2": "^4.0.6-rc.1"
+    "select2": "^4.0.6-rc.1",
+    "cordova-pdf-generator": "^2.0.8",
+    "cordova-plugin-printer": "^0.8.0"
   }
 }
