--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -270,6 +270,7 @@ dependencies {
     compile "com.android.support:support-v4:25.+"
     compile "com.android.support:support-v4:25.+"
     compile "com.android.support:appcompat-v7:25.+"
+    compile "com.android.support:support-v4:25.+"
     // SUB-PROJECT DEPENDENCIES END
 }
 
