--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -17,3 +17,4 @@ cordova.system.library.2=com.android.support:support-v4:27.+
 cordova.system.library.3=com.android.support:appcompat-v7:27.+
 cordova.gradle.include.2=cordova-plugin-geolocation-android-activator/helloworld-LocationActivation.gradle
 cordova.gradle.include.3=cordova-plugin-geolocation-android-activator/helloworld-LocationActivation.gradle
+cordova.system.library.4=com.android.support:support-v4:28.+
