--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       },
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "27.+"
+      },
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "11.6.2"
       }
     }
   },
@@ -44,6 +48,7 @@
     "cordova-plugin-vibration": "~2.1.5",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.12",
-    "select2": "^4.0.6-rc.1"
+    "select2": "^4.0.6-rc.1",
+    "phonegap-plugin-push": "2.2.3"
   }
 }
