--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -93,6 +93,8 @@ ext {
 // PLUGIN GRADLE EXTENSIONS START
 apply from: "../cordova-android-support-gradle-release/helloworld-cordova-android-support-gradle-release.gradle"
 apply from: "../cordova-plugin-geolocation-android-activator/helloworld-LocationActivation.gradle"
+apply from: "../cordova-support-google-services/helloworld-build.gradle"
+apply from: "../phonegap-plugin-multidex/helloworld-multidex.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras1 = file('build-extras.gradle').exists()
@@ -267,9 +269,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
     // SUB-PROJECT DEPENDENCIES START
     implementation(project(path: ":CordovaLib"))
-    compile "com.android.support:support-v4:25.+"
-    compile "com.android.support:support-v4:25.+"
-    compile "com.android.support:appcompat-v7:25.+"
+    compile "com.android.support:support-v4:24.1.1+"
+    compile "com.android.support:support-v4:27.+"
+    compile "com.android.support:appcompat-v7:27.+"
+    compile "com.android.support:support-v13:27.+"
+    compile "me.leolin:ShortcutBadger:1.1.17@aar"
+    compile "com.google.firebase:firebase-messaging:11.6.2"
     // SUB-PROJECT DEPENDENCIES END
 }
 
