--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -17,3 +17,8 @@ cordova.system.library.2=com.android.support:support-v4:27.+
 cordova.system.library.3=com.android.support:appcompat-v7:27.+
 cordova.gradle.include.2=cordova-plugin-geolocation-android-activator/helloworld-LocationActivation.gradle
 cordova.gradle.include.3=cordova-plugin-geolocation-android-activator/helloworld-LocationActivation.gradle
+cordova.gradle.include.4=cordova-support-google-services/helloworld-build.gradle
+cordova.gradle.include.5=phonegap-plugin-multidex/helloworld-multidex.gradle
+cordova.system.library.4=com.android.support:support-v13:27.+
+cordova.system.library.5=me.leolin:ShortcutBadger:1.1.17@aar
+cordova.system.library.6=com.google.firebase:firebase-messaging:11.6.2
