--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "displayName": "helloworld",
   "cordova": {
-    "platforms": [],
+    "platforms": [
+      "browser",
+      "android"
+    ],
     "plugins": {
       "cordova-plugin-battery-status": {},
       "cordova-plugin-camera": {},
@@ -33,14 +36,20 @@
       },
       "cordova-android-play-services-gradle-release": {
         "PLAY_SERVICES_VERSION": "15.+"
+      },
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "11.6.2"
       }
     }
   },
   "dependencies": {
     "bootstrap-datepicker": "^1.8.0",
+    "cordova-android": "^7.1.4",
     "cordova-android-firebase-gradle-release": "^3.0.0",
     "cordova-android-play-services-gradle-release": "^3.0.0",
     "cordova-android-support-gradle-release": "^2.1.0",
+    "cordova-browser": "^5.0.4",
     "cordova-pdf-generator": "^2.0.8",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-battery-status": "^1.2.5",
@@ -58,7 +67,10 @@
     "cordova-plugin-printer": "^0.8.0",
     "cordova-plugin-vibration": "^2.1.6",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.1.0",
     "cordova.plugins.diagnostic": "^4.0.12",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3",
     "select2": "^4.0.6-rc.1"
   }
 }
