--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "displayName": "helloworld",
   "cordova": {
     "platforms": [
-      "android",
-      "browser"
+      "android"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -25,21 +24,6 @@
       },
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "27.+"
-      },
-      "phonegap-plugin-push": {
-        "ANDROID_SUPPORT_V13_VERSION": "27.+",
-        "FCM_VERSION": "11.6.2"
-      },
-      "cordova-pdf-generator": {},
-      "cordova-plugin-printer": {
-        "ANDROID_SUPPORT_V4_VERSION": "28.+"
-      },
-      "cordova-plugin-background-mode": {},
-      "cordova-android-firebase-gradle-release": {
-        "FIREBASE_VERSION": "15.+"
-      },
-      "cordova-android-play-services-gradle-release": {
-        "PLAY_SERVICES_VERSION": "15.+"
       }
     }
   },
@@ -60,13 +44,6 @@
     "cordova-plugin-vibration": "~2.1.5",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.12",
-    "select2": "^4.0.6-rc.1",
-    "phonegap-plugin-push": "2.2.3",
-    "cordova-browser": "^5.0.4",
-    "cordova-pdf-generator": "^2.0.8",
-    "cordova-plugin-printer": "^0.8.0",
-    "cordova-plugin-background-mode": "^0.7.2",
-    "cordova-android-firebase-gradle-release": "^3.0.0",
-    "cordova-android-play-services-gradle-release": "^3.0.0"
+    "select2": "^4.0.6-rc.1"
   }
 }
