platform remova add android

--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -94,6 +94,7 @@ ext {
 apply from: "../cordova-android-firebase-gradle-release/pusatriyal-cordova-android-firebase-gradle-release.gradle"
 apply from: "../cordova-android-play-services-gradle-release/pusatriyal-cordova-android-play-services-gradle-release.gradle"
 apply from: "../cordova-android-support-gradle-release/pusatriyal-cordova-android-support-gradle-release.gradle"
+apply from: "../cordova-support-google-services/pusatriyal-build.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras1 = file('build-extras.gradle').exists()
@@ -268,10 +269,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
     // SUB-PROJECT DEPENDENCIES START
     implementation(project(path: ":CordovaLib"))
-    compile "com.android.support:support-v4:24.1.1+"
-    compile "com.android.support:support-v4:28.+"
-    compile "com.android.support:support-v4:27.+"
-    compile "com.android.support:appcompat-v7:27.+"
+    compile "com.android.support:support-v4:25.+"
+    compile "com.android.support:support-v4:25.+"
+    compile "com.android.support:support-v4:25.+"
+    compile "com.android.support:appcompat-v7:25.+"
     // SUB-PROJECT DEPENDENCIES END
 }
 
