--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -16,5 +16,6 @@ cordova.gradle.include.2=cordova-android-play-services-gradle-release/pusatriyal
 cordova.gradle.include.3=cordova-android-support-gradle-release/pusatriyal-cordova-android-support-gradle-release.gradle
 cordova.system.library.1=com.android.support:support-v4:24.1.1+
 cordova.system.library.2=com.android.support:support-v4:28.+
+cordova.gradle.include.4=cordova-support-google-services/pusatriyal-build.gradle
 cordova.system.library.3=com.android.support:support-v4:27.+
 cordova.system.library.4=com.android.support:appcompat-v7:27.+
