--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,21 +1,12 @@
 {
-  "name": "My App",
-  "short_name":"My Ap",
-  "description": "Description of your app from template",
-  "start_url": "index.html",
-  "scope":"index.html",
-  "icons": [{
-    "src": "img/logo.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }, {
-    "src": "img/splash.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }],
-  "default_locale": "en",
+  "background_color": "#FFF",
   "display": "standalone",
-  "background_color":"#FFF",
-  "theme_color":"#000",
-  "orientation": "landscape"
+  "name": "Pusat Riyal",
+  "short_name": "Pusat Riyal",
+  "version": "com.phonegap.pusatriyal",
+  "description": "Sistem Informasi Pusat Riyal.",
+  "author": "syaifudinhadi8@gmail.com",
+  "icons": [],
+  "orientation": "portrait",
+  "start_url": "index.html"
 }
