--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "displayName": "helloworld",
   "cordova": {
     "platforms": [
-
       "android",
-
       "browser"
-
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -68,6 +65,8 @@
     "cordova-plugin-vibration": "~2.1.5",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.12",
-    "select2": "^4.0.6-rc.1"
+    "select2": "^4.0.6-rc.1",
+    "cordova-browser": "^5.0.4",
+    "phonegap-plugin-push": "2.2.3"
   }
 }
